[package]
name = "OptivaWS"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
async-tungstenite = { version = "0.22", features = ["async-std-runtime", "async-tls"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
statrs = "0.16"